[gd_scene load_steps=3 format=3 uid="uid://bqhds7d0caouj"]

[ext_resource type="Script" path="res://utils/item_option.gd" id="1_i2ibo"]
[ext_resource type="Texture2D" uid="uid://0hl8s1nkixvr" path="res://textures/items/weapons/sword.png" id="2_0rhol"]

[node name="ItemOption" type="ColorRect"]
custom_minimum_size = Vector2(180, 50)
offset_right = 180.0
offset_bottom = 50.0
size_flags_horizontal = 3
color = Color(0.482353, 0.482353, 0.482353, 1)
script = ExtResource("1_i2ibo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 26.0
offset_bottom = 26.0
color = Color(0, 0, 0, 1)

[node name="Icon" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_0rhol")
stretch_mode = 4

[node name="LabelName" type="Label" parent="."]
layout_mode = 0
offset_left = 26.0
offset_right = 66.0
offset_bottom = 23.0
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelDescription" type="Label" parent="."]
layout_mode = 0
offset_top = 27.0
offset_right = 180.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 8
text = "I tem Description..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelLevel" type="Label" parent="."]
layout_mode = 0
offset_left = 140.0
offset_right = 180.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 12
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
